--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!-- index.wxml -->
-<view>
+<view class='main-container'>
   <view class='pic-container'>
     <swiper class='swiper-container' indicator-dots='{{true}}' autoplay='true' interval='3000' duration='1000'>
       <swiper-item>
@@ -13,15 +13,29 @@
       </swiper-item>
     </swiper>
   </view>
-  <view class='map-container'>
-    <button bindtap='mapButton' class='map-container-button'>View the map</button>
+
+<view class='about-container'> 
+</view>
+
+<text class='poem-container' decode="{{true}}" space="{{true}}">
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 云中谁寄锦书来，\n 
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 雁字回时，月满西楼。
+</text>
+
+<view class="btn-area">
+      <button bindtap='aboutButton' class='about-container-button'>关于</button>
+  </view> 
+
+  <!-- <view class='map-container'>
+    <button bindtap='mapButton' class='map-container-button'>查看地图</button>
   </view>
   <view class='leftright-container'>
     <view class='knowledge-container'>
-      <button bindtap='knowledgeButton' class='knowledge-container-button'>Knowledge</button>
+      <button bindtap='knowledgeButton' class='knowledge-container-button'>科普知识</button>
     </view>
     <view class='about-container'>
-      <button bindtap='aboutButton' class='about-container-button'>About</button>
+      <button bindtap='aboutButton' class='about-container-button'>关于</button>
     </view>
   </view>
-</view>
+ -->
+ </view>
