--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,40 +1,40 @@
 <!-- index.wxml -->
-<view class='main-container'>
-  <view class='pic-container'>
-    <swiper class='swiper-container' indicator-dots='{{true}}' autoplay='true' interval='3000' duration='1000'>
+<view class="main-container">
+  <view class="pic-container">
+    <swiper class="swiper-container" indicator-dots="{{true}}" autoplay="true" interval="3000" duration="1000">
       <swiper-item>
-        <image class="swiper-image" src="{{resultset[0]}}" mode='scaleToFill'></image>
+        <image class="swiper-image" src="{{resultset[0]}}" mode="scaleToFill"></image>
       </swiper-item>
       <swiper-item>
-        <image class="swiper-image" src="{{resultset[1]}}" mode='scaleToFill'></image>
+        <image class="swiper-image" src="{{resultset[1]}}" mode="scaleToFill"></image>
       </swiper-item>
       <swiper-item>
-        <image class="swiper-image" src="{{resultset[2]}}" mode='scaleToFill'></image>
+        <image class="swiper-image" src="{{resultset[2]}}" mode="scaleToFill"></image>
       </swiper-item>
     </swiper>
   </view>
 
-<view class='about-container'> 
+<view class="about-container"> 
 </view>
 
-<text class='poem-container' decode="{{true}}" space="{{true}}">
+<text class="poem-container" decode="{{true}}" space="{{true}}">
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 云中谁寄锦书来，\n 
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 雁字回时，月满西楼。
 </text>
 
 <view class="btn-area">
-      <button bindtap='aboutButton' class='about-container-button'>关于</button>
+      <button bindtap="aboutButton" class="about-container-button">关于</button>
   </view> 
 
-  <!-- <view class='map-container'>
-    <button bindtap='mapButton' class='map-container-button'>查看地图</button>
+  <!-- <view class="map-container">
+    <button bindtap="mapButton" class="map-container-button">查看地图</button>
   </view>
-  <view class='leftright-container'>
-    <view class='knowledge-container'>
-      <button bindtap='knowledgeButton' class='knowledge-container-button'>科普知识</button>
+  <view class="leftright-container">
+    <view class="knowledge-container">
+      <button bindtap="knowledgeButton" class="knowledge-container-button">科普知识</button>
     </view>
-    <view class='about-container'>
-      <button bindtap='aboutButton' class='about-container-button'>关于</button>
+    <view class="about-container">
+      <button bindtap="aboutButton" class="about-container-button">关于</button>
     </view>
   </view>
  -->
