--- a/pages/indexMap/indexMap.wxml
+++ b/pages/indexMap/indexMap.wxml
@@ -1,3 +1,3 @@
 <view>
-    <map class='mapContainer' markers='{{markers}}' scale='{{scale}}' alpha='{{alpha}}'></map>
+    <map class="mapContainer" markers="{{markers}}" scale="{{scale}}" alpha="{{alpha}}"></map>
 </view>
