--- a/pages/aboutUs/aboutUs.wxml
+++ b/pages/aboutUs/aboutUs.wxml
@@ -1,26 +1,18 @@
 <!--pages/aboutUs/aboutUs.wxml-->
-<view class="attrs">
-  <image class="show-image" src="../../images/iscaslogo.png"></image>
-  <text>\n</text>
-  <text>\n</text>
-  <text>\n</text>
-  <text class="key">小程序简介</text>
-  <text class="item" decode="{{true}}" space="{{true}}">
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;水鸟识别小程序可识别164种水鸟,由“地球大数据科学工程CASEarth”先导专项支持，由中科院软件所天基综合信息系统重点实验室（Science & Technology on Integrated Infomation System Laboratory）开发，数据由中科院地理所提供。\n
-  </text>
-
-  <text class="key">数据介绍</text>
-  <text class="item" decode="{{true}}" space="{{true}}">
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 训练集：8593个样本；测试集：2149个样本\n 
-  </text>
-
-  <text class="key">方法介绍</text>
-  <text class="item" decode="{{true}}" space="{{true}}">
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 采用Bilinear CNN网络。\n 
-  </text>
-
-  <text class="key">效果介绍</text>
-  <text class="item" decode="{{true}}" space="{{true}}">
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 精度：87.68%（Test accuracy）\n 
-  </text>
+<view class="page">
+  <view class="page__hd">
+    <image class="show-image" src="../../images/iscaslogo.png" mode="aspectFit" />
+    <view class="page__title">小程序简介</view>
+    <view class="page__desc">水鸟识别小程序可识别164种水鸟,由“地球大数据科学工程CASEarth”先导专项支持，由中科院软件所天基综合信息系统重点实验室（Science & Technology on Integrated Infomation System Laboratory）开发，数据由中科院地理所提供。</view>
+    <view class="page__desc">\n</view>
+    <view class="page__title">数据介绍</view>
+    <view class="page__desc">训练集：8593个样本；测试集：2149个样本</view>
+    <view class="page__desc">\n</view>
+    <view class="page__title">方法介绍</view>
+    <view class="page__desc">采用Bilinear CNN网络。</view>
+    <view class="page__desc">\n</view>
+    <view class="page__title">效果介绍</view>
+    <view class="page__desc">精度：87.68%（Test accuracy）</view>
+    <view class="page__desc">\n</view>
+  </view>
 </view>
