--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,7 @@
 /**index.wxss**/
 
+@import '/utils/weui.wxss';
+
 .pic-container {
   width: 100%;
   height: 100vh;
@@ -58,7 +60,7 @@
   color: rgb(1, 0, 2);
   position: absolute;
   left: 0vw;
-  top: 74vh;
+  top: 73.5vh;
   font-family: KaiTi;
   font-size: 45rpx;
 }
@@ -75,18 +77,6 @@
   top: 70vh;
 }
 
-.about-container-button {
-  width: 18vw;
-  height: 5vh;
-  border-radius: 80rpx;
-  background-color: #fff;
-  color: grey;
-  font-size: 30rpx;
-  position: absolute;
-  left: 77vw;
-  top: 93vh;
-}
-
 .leftright-container {
   display: flex;
 }
@@ -96,4 +86,11 @@
   height: 100vh;
   margin: 0 auto;
   position: relative;
+}
+
+.weui-footer{
+    margin-bottom: 50px;
+}
+.weui-footer_fixed-bottom{
+    margin-bottom: 0;
 }
