2019-11-10 17:33 Primary Logic Done

--- a/pages/results/results.wxml
+++ b/pages/results/results.wxml
@@ -1,1 +1,30 @@
-<image class="show-image" src="{{imageURL}}"/>
+<view class="page">
+  <view class="page__hd">
+    <view class="show-image">
+      <image class="in-class" src="{{imageURL}}" mode="aspectFit" />
+    </view>
+  </view>
+
+  <view class="page__bd">
+
+    <view class="container" style="padding-top:31vh;">
+      <view class="divLine">
+      </view>
+    </view>
+
+    <wux-tabs wux-class="bordered" controlled current="{{ key }}" bindchange="onTabsChange">
+      <block wx:for="{{ results }}" wx:key="key">
+        <wux-tab key="{{ item.key }}" title="{{ item.key }}"></wux-tab>
+      </block>
+    </wux-tabs>
+    <swiper current="{{ index }}" bindchange="onSwiperChange">
+      <block wx:for="{{ results }}" wx:key="key">
+        <swiper-item>
+          <image class="result-image" src="{{ item.pic }}" mode="aspectFit" />
+        </swiper-item>
+      </block>
+    </swiper>
+
+  </view>
+
+</view>
