--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,7 +1,5 @@
 /**index.wxss**/
 
-@import '/utils/weui.wxss';
-
 .pic-container {
   width: 100%;
   height: 100vh;
@@ -88,9 +86,54 @@
   position: relative;
 }
 
-.weui-footer{
-    margin-bottom: 50px;
+.weui-footer {
+  color: rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+  line-height: 1.4;
+  text-align: center;
 }
-.weui-footer_fixed-bottom{
-    margin-bottom: 0;
+
+.weui-footer_fixed-bottom {
+  position: fixed;
+  bottom: 16px;
+  bottom: calc(16px + constant(safe-area-inset-bottom));
+  bottom: calc(16px + env(safe-area-inset-bottom));
+  left: 0;
+  right: 0;
+}
+
+.weui-footer__links {
+  font-size: 0;
+}
+
+.weui-footer__link {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 8px;
+  position: relative;
+  font-size: 14px;
+  color: #576b95;
+}
+
+.weui-footer__link:before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1px;
+  bottom: 0;
+  border-left: 1rpx solid #c7c7c7;
+  color: #c7c7c7;
+  left: -8px;
+  top: 0.36em;
+  bottom: 0.36em;
+}
+
+.weui-footer__link:first-child:before {
+  display: none;
+}
+
+.weui-footer__text {
+  padding: 0 0.34em;
+  font-size: 12px;
 }
