2019-11-10 18:47 For the last function

--- a/pages/results/results.wxml
+++ b/pages/results/results.wxml
@@ -17,14 +17,29 @@
         <wux-tab key="{{ item.key }}" title="{{ item.key }}"></wux-tab>
       </block>
     </wux-tabs>
-    <swiper current="{{ index }}" bindchange="onSwiperChange">
+    <swiper current="{{ index }}" bindchange="onSwiperChange" style="height:45vh;background-color:white;">
       <block wx:for="{{ results }}" wx:key="key">
         <swiper-item>
-          <image class="result-image" src="{{ item.pic }}" mode="aspectFit" />
+          <view class="result">
+
+            <image class="result-image" src="{{ item.pic }}" />
+
+            <view class="result-text">
+              <view class="page__desc">中文名: </view>
+              <view class="page__title">{{ item.key }}</view>
+
+              <view class="page__desc">英文名: </view>
+              <view class="page__title">{{ item.nameEN }}</view>
+
+              <view class="page__desc">识别置信率: </view>
+              <view class="page__title">{{ item.probability }}</view>
+
+              <navigator url="/pages/showdetail/showdetail?showId={{ item.key }}" style="margin:10px 10px;">点击查看详情</navigator>
+            </view>
+
+          </view>
         </swiper-item>
       </block>
     </swiper>
-
   </view>
-
 </view>
