--- a/pages/results/results.wxss
+++ b/pages/results/results.wxss
@@ -10,45 +10,17 @@
   height: 600rpx;
 }
 
-.result-image {
-  display: flex;
-  justify-content: center;
-  height: 10vh;
-}
-
-.result-image image {
-  width: 60rpx;
-}
-
-.result-content {
-  width: 120px;
-  height: 120px;
-  font-size: 13px;
-  font-family: "楷体";
-  color: #888;
-}
-
-.result-title {
-  padding-top: 0rpx;
-  width: 120px;
-  height: 120px;
-  font-size: 18px;
-  font-family: "黑体";
-  color: #000;
-}
-
-.result {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  padding-left: 10rpx;
-}
-
-result-container {
+.result{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: left;
+}
+
+.result-image {
+  width: 60%;
+}
+
+.result-text {
+  width: 40%;
 }
 
 .divLine {
