2019-11-13 22:01 Toasts bug fixed

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,5 @@
 <!-- index.wxml -->
+<wux-loading id="wux-loading" />
 <wux-fab-button position="{{ types[typeIndex] }}" theme="{{ colors[colorIndex] }}" direction="{{ dirs[dirIndex] }}" reverse="{{ reverse }}" spaceBetween="{{ spaceBetween }}" sAngle="{{ sAngle }}" eAngle="{{ eAngle }}" buttons="{{ buttons }}" bind:click="onClick"
   bind:camera="getCameraImage" bind:album="getAlbumImage" bind:message="getMessageImage" />
 
