--- a/pages/aboutUs/aboutUs.wxml
+++ b/pages/aboutUs/aboutUs.wxml
@@ -1,20 +1,35 @@
 <!-- pages/aboutUs/aboutUs.wxml -->
 <view class="page">
-  <view class="page__hd">
+  <view>
     <image class="show-image" src="../../images/iscaslogo.png" mode="aspectFit" />
-    <view class="page__title">小程序简介</view>
-    <view class="page__desc">
-      水鸟识别小程序可识别164种水鸟,由“地球大数据科学工程CASEarth”先导专项支持，由中科院软件所天基综合信息系统重点实验室（Science & Technology on Integrated Infomation System Laboratory）开发，数据由中科院地理所提供。
+  </view>
+  <view class="weui-panel">
+    <!-- <view class="weui-panel__hd">小程序简介</view> -->
+    <view class="weui-panel__bd">
+      <view class="weui-media-box weui-media-box_text">
+        <h4 class="weui-media-box__title">小程序简介</h4>
+        <view class="weui-media-box__desc" style="color:rgb(0,0,0,50%); -webkit-line-clamp:30;">
+          水鸟识别小程序可识别164种水鸟, 由"地球大数据科学工程CAS-Earth"先导专项支持, 由中科院软件所天基综合信息系统重点实验室(Science & Technology on Integrated Infomation System Laboratory)开发, 数据由中科院地理所提供.
+        </view>
+      </view>
+      <view class="weui-media-box weui-media-box_text">
+        <h4 class="weui-media-box__title">数据介绍</h4>
+        <view class="weui-media-box__desc" style="color:rgb(0,0,0,50%); -webkit-line-clamp:30;">
+          训练集: 8593个样本; 测试集：2149个样本.
+        </view>
+      </view>
+      <view class="weui-media-box weui-media-box_text">
+        <h4 class="weui-media-box__title">方法介绍</h4>
+        <view class="weui-media-box__desc" style="color:rgb(0,0,0,50%); -webkit-line-clamp:30;">
+          采用Bilinear CNN网络.
+        </view>
+      </view>
+      <view class="weui-media-box weui-media-box_text">
+        <h4 class="weui-media-box__title">效果介绍</h4>
+        <view class="weui-media-box__desc" style="color:rgb(0,0,0,50%); -webkit-line-clamp:30;">
+          训练精度：94.30%; 测试精度：87.68%.
+        </view>
+      </view>
     </view>
-    <view class="page__desc">\n</view>
-    <view class="page__title">数据介绍</view>
-    <view class="page__desc">训练集：8593个样本；测试集：2149个样本</view>
-    <view class="page__desc">\n</view>
-    <view class="page__title">方法介绍</view>
-    <view class="page__desc">采用Bilinear CNN网络</view>
-    <view class="page__desc">\n</view>
-    <view class="page__title">效果介绍</view>
-    <view class="page__desc">精度：87.68%（Test accuracy）</view>
-    <view class="page__desc">\n</view>
   </view>
 </view>
