--- a/pages/aboutUs/aboutUs.wxss
+++ b/pages/aboutUs/aboutUs.wxss
@@ -1,7 +1,7 @@
 /* pages/aboutUs/aboutUs.wxss */
-
+@import "../../weui.wxss";
 .show-image {
-  padding-top: 5vh;
-  width: 100%;
+  padding: 3vh 0 0 15vw;
+  width: 70vw;
   height: 10vh;
 }
