--- a/pages/showdetail/showdetail.wxss
+++ b/pages/showdetail/showdetail.wxss
@@ -1,42 +1,43 @@
 /* pages/showdetail/showdetail.wxss */
+@import "../../weui.wxss";
 
 .show-image {
-  width: 100%;
-  height: 220px;
+  margin-top: 3vh;
+  width: 100vw;
 }
 
-.title{
+.title {
   font-size: 80rpx;
   padding-left: 10rpx;
 }
 
-.subtile{
+.subtile {
   font-weight: bold;
   padding-left: 10rpx;
 }
 
-.subcontent{
+.subcontent {
   padding-left: 10rpx;
 }
 
-.key{
+.key {
   font-size: 40rpx;
   font-family: "楷体";
-  color: #000; 
+  color: #000;
   padding-left: 3%;
 }
 
-.item{
+.item {
   font-size: 28rpx;
   font-family: "楷体";
-  color: #777; 
+  color: #777;
   padding-left: 5%;
 }
 
-.foot-item{
+.foot-item {
   font-size: 28rpx;
   font-family: "楷体";
-  color: #000; 
+  color: #000;
   display: flex;
   flex-direction: column;
   justify-content: center;
