--- a/pages/results/results.wxss
+++ b/pages/results/results.wxss
@@ -1,5 +1,5 @@
 /* pages/results/results.wxss */
-
+@import "../../weui.wxss";
 .show-image {
   display: flex;
   justify-content: center;
@@ -11,7 +11,7 @@
   justify-content: center;
 }
 
-.result{
+.result {
   display: flex;
   flex-direction: row;
 }
