--- a/pages/search_result/search_result.wxml
+++ b/pages/search_result/search_result.wxml
@@ -4,9 +4,8 @@
 <view class="page">
   <view class="main-container">
     <view class="image-container">
-      <image class="bg-image" src="{{ image_bg }}"></image>
+      <image class="bg-image" style="opacity:0.4" src="{{ image_bg }}"></image>
     </view>
-    <view class="about-container"></view>
     <view class="about-grid-main">
       <view class="page__title">您看到的可能是:</view>
     </view>
