2020-05-26 21:32 Change style. Add vibration. Add correction function.

--- a/app.wxss
+++ b/app.wxss
@@ -23,9 +23,7 @@ page {
 }
 
 .page__title {
-  margin-left: 10px;
-  text-align: left;
-  font-size: 20px;
+  text-align: center;
   font-weight: 400;
 }
 
