--- a/pages/correct/correct.wxss
+++ b/pages/correct/correct.wxss
@@ -1,17 +1,18 @@
 /* pages/correct/correct.wxss */
 @import "../../weui.wxss";
 .show-image {
-  margin-bottom: 3vh;
+  height: 800rpx;
   width: 100vw;
 }
 
 .searchbar-result {
+  display: flex;
+  flex-direction: row;
   margin-top: 0;
   font-size: 14px;
 }
 .searchbar-result .weui-cell__bd {
   padding: 2px 0 2px 20px;
-  color: var(--weui-FG-0);
 }
 .searchbar-result:before {
   display: none;
